# resume-screening-system-MXPERTZ

./: .env.example  .gitignore  README.md  pyproject.toml  todo.md
app/: ai_client.py  main.py  matcher.py  parser.py  utils.py
samples/: job_description.txt
