[project]
name = "resume-screening-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "openai>=1.40.0",
    "pypdf>=4.2.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.28",
]
